Fix global layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,8 @@ body {
   font-size: 3rem;
 }
 
-.mapboxgl-canvas-container {
+.mapboxgl-canvas-container,
+#map {
 
   height: calc(100vh - 121px);
 
